# FaceRecognizeSDK2

FaceRecognizeSDK2/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
FaceRecognizeSDK2/app/src/androidTest/java/com/binjn/admin/facerecognizesdk/: ExampleInstrumentedTest.java
FaceRecognizeSDK2/app/src/main/: AndroidManifest.xml
FaceRecognizeSDK2/app/src/main/java/com/binjn/admin/facerecognizesdk/: MainActivity.java
FaceRecognizeSDK2/app/src/main/java/com/binjn/admin/facerecognizesdk/face/: FaceRecognizer.java  FaceRecognizerAutherity.java  InintData.java
FaceRecognizeSDK2/app/src/main/java/com/binjn/admin/facerecognizesdk/interfaced/: FaceFeaturesCallback.java  FaceInitDataListener.java  FaceInitResultCallback.java  FaceValidatePhotoCcallback.java  OkHttpCallBack.java  OkHttpCallBack2.java  OkhttpCallbBack3.java  faceSimilarityCallback.java
FaceRecognizeSDK2/app/src/main/java/com/binjn/admin/facerecognizesdk/model/: APIAutherityBean.java  CheckedTokenBean.java  CreateFaceIdBean.java  DeviceIdBean.java  DevicePersonBean.java  DeviceUnRegisterBean.java  FaceBandPhotoBean.java  FaceDetectorBean.java  FaceFeatureLib.java  FeatureValueBean.java  LocalHashCodeBean.java  NirFaceFeatureBean.java  NirFaceFeaturesBean.java  PersonsBean.java  PushPersonBean.java  ReceiverMessageBean.java  ServerHashCodeBean.java  TestBean.java  TokenBean.java  TokenOutData.java  UploadDataBean.java  UploadFeature.java  UploadFeatureValueBean.java  UploadFileBean.java
FaceRecognizeSDK2/app/src/main/java/com/binjn/admin/facerecognizesdk/net/: RequestData.java
FaceRecognizeSDK2/app/src/main/java/com/binjn/admin/facerecognizesdk/presenter/: XThreadPoolExecutor.java  XiChuHuaYuan.java
FaceRecognizeSDK2/app/src/main/java/com/binjn/admin/facerecognizesdk/receiver/: AliMessageReceiver.java  LogcatReceiver.java  TimerReceiver.java
FaceRecognizeSDK2/app/src/main/java/com/binjn/admin/facerecognizesdk/utils/: Base64Utils.java  ByteUtils.java  Constants.java  DateTimeUtils.java  FastUtils.java  FileUtils.java  HashKitUtils.java  ImgUtils.java  JsonUtils.java  LogCatHelper.java  LogInfoUtils.java  LogUtils.java  MacAddressUtils.java  NetWorkUtils.java  OkHttpUtils.java  Okhttp3Utils.java  SQLiteUitls.java  SignUtils.java  TimeCountUtils.java  TimerUtils.java
FaceRecognizeSDK2/app/src/main/java/com/seetatech/toolchainv3/: ToolChain.java
FaceRecognizeSDK2/app/src/main/res/layout/: activity_main.xml
FaceRecognizeSDK2/app/src/main/res/values/: strings.xml
FaceRecognizeSDK2/app/src/test/java/com/binjn/admin/facerecognizesdk/: ExampleUnitTest.java
FaceRecognizeSDK2/gradle/wrapper/: gradle-wrapper.properties
